fix swagger for render
