# cmd/server/main.go
@@ -1,8 +1,9 @@
 // @title           GoDelivery API
 // @version         1.0
 // @description     REST API для сервиса доставки еды
-// @host            localhost:8080
+// @host            godelivery-z3dw.onrender.com
 // @BasePath        /api
+// @schemes         https
 // @securityDefinitions.apikey BearerAuth
 // @in header
 // @name Authorization
